<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfoodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.myfoodapp.ui.gallery.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.myfoodapp.ui.slideshow.SlideshowFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.myfoodapp.SavedFragment"
        android:label="Saved"
        tools:layout="@layout/fragment_saved" />
</navigation>