<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/Grey"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/ver_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/breakfast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ver_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="15dp"
            android:drawablePadding="5dp"
            android:text="@string/b_nh_m_tr_ng_p_la_si_u_n_gi_n"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ver_img"
            app:drawableLeftCompat="@drawable/baseline_emoji_emotions_24" />

        <TextView
            android:id="@+id/ver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="5dp"
            android:text="@string/ph_m_ho_ng_n"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ver_title"
            app:drawableLeftCompat="@drawable/baseline_account_circle" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/b_nh_lu_n"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/baseline_mode_comment_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toEndOf="@+id/ver_name"
            app:layout_constraintTop_toBottomOf="@+id/ver_title" />

        <TextView
            android:id="@+id/ver_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/_128"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.795"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/ver_title"
            app:drawableLeftCompat="@drawable/baseline_favorite_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>